# WorldPopPy

./: .gitignore  README.md  pyproject.toml  readme_pypi.md
docs/: worldpoppy.rst
tests/: test_utils.py
tests/e2e/: test_dry_run.py  test_manifest_download.py
tests/unit/: test_config.py  test_geo.py  test_manifest_logics.py
worldpoppy/: __init__.py  config.py  download.py  func_utils.py  manifest.py  plot_utils.py  raster.py  utils.py
